# bbq-monitor

./: .gitignore  .markdownlint.json  ARCHITECTURE.md  CLAUDE.md  CLOUD_SYNC.md  Cargo.toml  PREMIUM_GUIDE.md  PROTOCOL_DOCUMENTATION.md  README.md  config.toml  meater-shadow.json  shadow-output.json  shadow-payload.json
.claude/: settings.local.json
flutter_app/: ANDROID_BUILD.md  BLE_INTEGRATION.md  BUILD_GUIDE.md  QUICK_BUILD.md  README.md  WINDOWS_BUILD.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts  proguard-rules.pro
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/bbqmonitor/app/: MainActivity.kt
flutter_app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
flutter_app/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
flutter_app/lib/: main.dart
flutter_app/lib/models/: bbq_device.dart
flutter_app/lib/screens/: alerts_screen.dart  cook_profiles_screen.dart  history_screen.dart  home_screen.dart  premium_screen.dart  settings_screen.dart
flutter_app/lib/services/: ble_service.dart  license_service.dart  payment_service.dart  rust_ble_service.dart  rust_ffi.dart  settings_service.dart
flutter_app/lib/theme/: app_theme.dart
flutter_app/lib/utils/: premium_gate.dart
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
src/: aws_client.rs  config.rs  database.rs  device_capabilities.rs  lib.rs  main.rs  premium.rs  protocol.rs  web_server.rs
