[package]
name = "bbq-monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "bbq_monitor"
crate-type = ["cdylib", "rlib"]

[features]
default = []
aws = []

[dependencies]
# BLE and async runtime
btleplug = "0.11"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"

# AWS SDK (requires Rust 1.88+, currently optional)
# Uncomment when upgrading to Rust 1.88+:
# aws-config = "1.1"
# aws-sdk-iot = "1.81"
# aws-sdk-iotdataplane = "1.71"
# aws-sdk-dynamodb = "1.50"